# pico4fun

./: .gitignore  CMakeLists.txt  LICENSE  README.md
pio/: CMakeLists.txt
pio/blink_led/: CMakeLists.txt  hello.pio  main.c
pio/square_wave/: CMakeLists.txt  main.c  wave.pio
sensor/: CMakeLists.txt
sensor/tempsense/: CMakeLists.txt  main.c
